@@ -7,6 +7,38 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 ---
 
+## [Unreleased]
+
+---
+
+## [0.13.0] - 2026-01-26
+
+### Added
+
+- **Token Fingerprinting Utilities**: Security utilities for collision-resistant token duplicate detection.
+  - `ProofFingerprint`: Computes SHA-256 fingerprints from sorted proof secrets with mint URL
+  - `TokenFingerprint`: Parses cashuA (V3/JSON) and cashuB (V4/CBOR) tokens to compute fingerprints
+  - Deterministic output regardless of proof ordering (secrets are sorted lexicographically)
+  - Fallback to string hashing when token parsing fails
+  - Thread-safe implementation with `@ThreadSafe` annotation
+  - Comprehensive unit tests for both utilities (24 tests)
+
+---
+
+## [0.12.0] - 2026-01-21
+
+### Added
+
+- **Virtual Thread Compatibility**: Full audit and documentation for Java 21+ Virtual Thread support.
+  - `@ThreadSafe` annotations on `BDHKEUtils`, `DLEQUtils`, `Schnorr`, and `KeysUtils`
+  - VT compatibility documentation in `docs/explanation/virtual-thread-compatibility.md`
+  - Concurrent crypto tests with 100+ Virtual Threads (`VirtualThreadConcurrencyTest`)
+  - CI pinning detection with `-Djdk.tracePinnedThreads=short`
+  - README section on Virtual Thread compatibility
+- Test coverage for `expiresAt` field in `VoucherPaymentRequest`
+
+---
+
 ## [0.11.1] - 2026-01-10
 
 ### Added
